syntax = "proto3";

package msg;

option go_package = "github.com/snowyyj001/loumiao/msg";

	
message LouMiaoLoginGate {		//登录网关
	int64 TokenId = 1;
	int64 UserId = 2;
	int32 WorldUid = 3;
}

message LouMiaoHeartBeat {		//客户端和gate间的心跳
	int64 TokenId = 1;
}

message LouMiaoRpcRegister {
	repeated string FuncName = 1;
}

message LouMiaoKickOut {
}

message LouMiaoClientConnect {
	int64 ClientId = 1;
	int64 GateId = 2;
}

message LouMiaoClientDisConnect {
	int64 ClientId = 1;
}

message LouMiaoRpcMsg {
	int64 TargetId = 1;		//>0指定目标服务器uid
	string FuncName = 2;
	bytes Buffer = 3;
	int64 SourceId = 4;		//>0指定源服务器uid
	int32 ByteBuffer = 5;		//消息内容是否为二进制格式
}

message LouMiaoNetMsg {
	int64 ClientId = 1;
	bytes Buffer = 2;
}

message LouMiaoBindGate {		//将user的gate信息告诉给其他服务器
	int32 Uid = 1;		//gate的uid
	int64 UserId = 2;	//userid
}
